--- a/properties.yaml
+++ b/properties.yaml
@@ -8,3 +8,4 @@ parent: course/tutors-reference-manual
 github: https://github.com/tutors-sdk/tutors-starter/blob/master
 llm: 2
 lightboxpdf: true
+whitelist: 1
